--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,10 @@
 .logo {
   position: absolute;
-  top: 10px; /* Adjust top position from top edge */
-  left: 10px; /* Adjust left position from left edge */
-  width: 90px; /* Adjust width as needed */
+  top: 10px;
+  left: 10px;
+  width: 90px;
   height: auto;
+  max-width: 100%;
 }
 body {
   font-family: Arial, sans-serif;
@@ -21,8 +22,8 @@ body {
   width: 100%;
 }
 .project-description {
-  text-align: center; /* Or adjust as needed */
-  margin-bottom: 15px; /* Add some spacing */
+  text-align: center;
+  margin-bottom: 15px;
   font-family: "Kanit", sans-serif;
   font-weight: 200;
   font-style: normal;
