--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,24 @@
+@media only screen and (max-width: 600px) {
+  .mobile-container {
+    width: 100%;
+    padding: 20px;
+  }
+
+  .logo {
+    width: 50px;
+    height: auto;
+    position: relative;
+  }
+
+  p {
+    font-size: 18px;
+  }
+  h1 {
+    font-size: 21px;
+  }
+}
 .logo {
-  position: absolute;
+  position: relative;
   top: 10px;
   left: 10px;
   width: 90px;
@@ -13,7 +32,7 @@ body {
   background-color: #c6dcba;
   min-height: 100vh;
   padding: 0 10px;
-  background: linear-gradient(180deg, #fff 30%, #c48a50 70%);
+  background: linear-gradient(180deg, #fff 30%, #d86f06a1 70%);
 }
 .container {
   margin: 50px auto;
@@ -34,7 +53,8 @@ body {
   margin-top: 20px;
   box-shadow: 7px 7px 20px rgba(121, 78, 0, 0.2);
   color: #fff;
-  background: #222;
+  background: #0000009d;
+  height: auto;
 }
 
 button {
@@ -57,8 +77,14 @@ button:hover {
   background-color: #b3a398;
 }
 
+.disabled-button {
+  background-color: gray;
+  cursor: not-allowed;
+}
+
 #fact {
   font-size: 18px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   font-family: "Kanit", sans-serif;
+  height: auto;
 }
